# plutonium

./: .gitignore  Cargo.toml  miner.conf  package.json
lib/: NanoPoolMiner.js  index.js
native/: Cargo.toml
native/src/: lib.rs
native/src/config/: mod.rs
native/src/error/: mod.rs
native/src/ffi/: ffi.rs  mod.rs
native/src/hash/: argon2d.rs  blake2b.rs  mod.rs
native/src/miner/: miner.rs  mod.rs  worker.rs
native/src/opencl/: mod.rs
native/src/utils/: mod.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/error/: mod.rs
src/ffi/: constants.rs  ffi.rs  types.rs
src/hash/: argon2d.rs  blake2b.rs  mod.rs  source.rs
src/miner/: config.rs  miner.rs  mod.rs  worker.rs
src/opencl/: mod.rs
src/pool/: chain.rs  client.rs  config.rs  message.rs  miner.rs  mod.rs  mode.rs  state.rs
src/utils/: mod.rs
