[package]
name = "plutonium"
version = "0.1.0"
authors = ["l1h3r"]
edition = "2018"

[lib]
name = "plutonium"

[dependencies]
base64 = "0.10.1"
byteorder = "1.3.1"
env_logger = "0.6.1"
futures = "0.1.25"
lazy_static = "1.3.0"
log = "0.4.6"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
tokio = "0.1.16"
tokio-tungstenite = "0.6.0"
tungstenite = "0.6.1"
url = "1.7.2"

beserial = { git = "https://github.com/nimiq/core-rs" }
nimiq-block = { git = "https://github.com/nimiq/core-rs" }
nimiq-blockchain = { git = "https://github.com/nimiq/core-rs" }
nimiq-consensus = { git = "https://github.com/nimiq/core-rs" }
nimiq-database = { git = "https://github.com/nimiq/core-rs" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs" }
nimiq-keys = { git = "https://github.com/nimiq/core-rs" }
nimiq-lib = { git = "https://github.com/nimiq/core-rs" }
nimiq-mempool = { git = "https://github.com/nimiq/core-rs" }
nimiq-network = { git = "https://github.com/nimiq/core-rs" }
nimiq-network-primitives = { git = "https://github.com/nimiq/core-rs" }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs" }
